<resources>
    <string name="app_name">simple</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">ABOUT</string>
    <string name="open">OPEN</string>
    <string name="close">CLOSE</string>

    <string name="sync_pref">Sync</string>
    <string name="sync_pref_summary">
        Get your photos,videos,contacts, subscriptions etc on all your devices.
    </string>

    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="nederlands">Nederlands</string>


    <string name="language">Language</string>
    <string name="language_dialog_title">Select language</string>
    <string name="language_default_value">English</string>

    <string-array name="language_entries">
        <item>English</item>
        <item>Hindi</item>
        <item>Nederlands</item>
        <item>Destusch</item>
        <item>Italiano</item>
        <item>Polski</item>
        <item>Progutuese</item>
    </string-array>

    <string-array name="language_values">
        <item>English</item>
        <item>Hindi</item>
        <item>Nederlands</item>
        <item>Destusch</item>
        <item>Italiano</item>
        <item>Polski</item>
        <item>Progutuese</item>
    </string-array>

    <string-array name="language_entryValue">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string name="pref_syncConnectionType">Sync Connection Type</string>
    <string name="pref_syncConnectionType_dialog_title">Perform Sync Using</string>
    <string name="pref_syncConnectionType_default_value">Wifi</string>
    <string name="pref_syncConnectionType_summary">Wifi</string>

    <string-array name="pref_syncConnectionType_entries">
        <item>Wifi</item>
        <item>Mobile Data</item>
        <item>Wifi/Mobile Data</item>
    </string-array>

    <string-array name="pref_syncConnectionType_values">
        <item>Wifi</item>
        <item>Mobile Data</item>
        <item>Wifi_Mobile</item>
    </string-array>


    //////////////////////////////////


    <string name="dark">dark</string>
    <string name="light">light</string>
    <string name="automatic">automatic</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="wifi_only">Wifi_only</string>
    <string name="auto_play">Auto Play</string>
    <string name="display">Display</string>
    <string name="brightness_level">Brightness Level</string>
    <string name="device_theme">Device Theme</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="change_wallpaper">Change Wallpaper</string>
    <string name="value_percent">30%</string>

    <string-array name="auto_play_entries">
        <item>@string/enabled</item>
        <item>@string/disabled</item>
        <item>@string/wifi_only</item>
    </string-array>

    <string-array name="theme_entries">
        <item>@string/automatic</item>
        <item>@string/light</item>
        <item>@string/dark</item>
    </string-array>

    <string-array name="entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    //////////////////////

    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="app_version">1.0</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="invalid_name">Empty Name field</string>
    <string name="invalid_mobile">Please enter a valid Number</string>
    <string name="invalid_email">Enter valid Email ID</string>
    <string name="invalid_username">Empty User name</string>
    <string name="invalid_password">Enter eight digit password</string>
    <string name="invalid_cpassword">Password does not match</string>
    <string name="COPY">\u00A9</string>

    <string-array name="names">
        <item>Select status</item>
        <item>Pending</item>
        <item>Success</item>
    </string-array>
</resources>
