<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="Alerts">

        <SwitchPreference
            android:key="switch_notifications"
            android:title="Notifications"
            android:defaultValue="true"
            android:summary="To get notifications identifiable"/>

    </PreferenceCategory>



<!--        <MultiSelectListPreference-->
<!--            android:key="multi_select_preference"-->
<!--            android:title="@string/auto_play"-->
<!--            android:summary="Enabled"-->
<!--            android:entries="@array/auto_play_entries"-->
<!--            android:entryValues="@array/entry_values"-->
<!--            android:dialogTitle="@string/auto_play"/>-->
    <PreferenceCategory
        android:title="About">

        <Preference
            android:selectable="false"
            android:summary="@string/summary_about" />

        <Preference
            android:summary="@string/app_version"
            android:title="@string/title_version" />

        <Preference
            android:key="@string/key_send_feedback"
            android:summary="@string/summary_support"
            android:title="@string/title_send_feedback" />

        <!-- preference opens url in browser -->
        <Preference
            android:summary="@string/summary_faq"
            android:title="@string/title_faq">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_faq" />
        </Preference>

        <Preference android:title="@string/privacy_policy">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_privacy" />
        </Preference>

        <Preference android:title="@string/title_terms">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_terms" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>


